aria labels to link card buttons

--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
                             <p class="card-text">An summary document produced by the UK government detailing what
                                 businesses need to know and to meet the equality law.</p>
                             <a href="https://assets.publishing.service.gov.uk/media/5a78dbdae5274a277e690056/business-summary.pdf"
-                                target="_blank" class="btn custom-button-outline">UK Equality Act 2010</a>
+                                target="_blank" class="btn custom-button-outline"
+                                aria-label="Equality Act 2010 Summary document (opens in a new tab)">
+                                UK Equality Act 2010</a>
                         </div>
                     </div>
                 </div>
@@ -218,7 +220,9 @@
                             <p class="card-text">This link details Positive Action for organisations, why they should
                                 use the policy and implementation advice.</p>
                             <a href="https://www.equalityhumanrights.com/guidance/business/employers-what-positive-action-workplace"
-                                target="_blank" class="btn custom-button-outline">EHRC - Positive Action</a>
+                                target="_blank" class="btn custom-button-outline"
+                                aria-label="EHRC positive action advice (opens in a new tab)">
+                                EHRC - Positive Action</a>
                         </div>
                     </div>
                 </div>
@@ -231,7 +235,9 @@
                             <p class="card-text">A page that lists various inclusivity policies your organisation should
                                 have, and what they should contain.</p>
                             <a href="https://theewgroup.com/blog/10-diversity-policies-you-need/" target="_blank"
-                                class="btn custom-button-outline">EW Group - Policies</a>
+                                class="btn custom-button-outline"
+                                aria-label="EW group inclusivity policy examples (opens in a new tab)">
+                                EW Group - Policies</a>
                         </div>
                     </div>
                 </div>
@@ -244,7 +250,9 @@
                             <p class="card-text">The charity has a list of organisations and networks for various
                                 protected groups. (and shared characteristics)</p>
                             <a href="https://diversityuk.org/useful-links/" target="_blank"
-                                class="btn custom-button-outline">Diversity UK - Networks</a>
+                                class="btn custom-button-outline"
+                                aria-label="Diversity UK diversity and inclusivity networks (opens in a new tab)">
+                                Diversity UK - Networks</a>
                         </div>
                     </div>
                 </div>
@@ -259,7 +267,9 @@
                             <p class="card-text">This link goes over Equality, Diversity, and Inclusion. Both
                                 information and guidance for organisations.</p>
                             <a href="https://www.acas.org.uk/improving-equality-diversity-and-inclusion" target="_blank"
-                                class="btn custom-button-outline">ACAS - Diversity & Inclusivity</a>
+                                class="btn custom-button-outline"
+                                aria-label="ACAS equality, diversity, and inclusion introduction and guidance (opens in a new tab)">
+                                ACAS - Diversity & Inclusivity</a>
                         </div>
                     </div>
                 </div>
@@ -273,7 +283,9 @@
                             <p class="card-text">Inclusive Communication Toolkit, assisting in removing barriers that
                                 exclude groups from your communications.</p>
                             <a href="https://businessdisabilityforum.org.uk/resource/inclusive-communication-toolkit-2/section-1-inclusive-communication-and-business/"
-                                target="_blank" class="btn custom-button-outline">BDF - Communication</a>
+                                target="_blank" class="btn custom-button-outline"
+                                aria-label="Business Disability Forum, Inclusive Communication Toolkit advice and recommendations (opens in a new tab)">
+                                BDF - Communication</a>
                         </div>
                     </div>
                 </div>
