diversity and inclusion pages content finished

--- a/diversity.html
+++ b/diversity.html
@@ -63,7 +63,29 @@
             <h1>Diversity</h1>
             <h3>What is Diversity?</h3>
             <p>
+                <!-- AI written -->
+                Diversity encompasses a wide range of characteristics within a group of people, including but not limited
+                to; race, ethnicity, gender, age, sexual orientation, disability, and cultural background.
 
+                Embracing diversity means recognizing and valuing these differences among employees, customers, and
+                stakeholders. It involves creating an inclusive environment where everyone feels respected, valued, and
+                able to contribute to their fullest potential.
+
+                A diverse workforce can bring numerous benefits to an organisation, including:
+                <ul>
+                    <li><strong>Enhanced Creativity and Innovation</strong>: Diverse teams bring varied perspectives and
+                        ideas, which can lead to more creative solutions and innovative approaches.</li>
+                    <li><strong>Better Decision-Making</strong>: A mix of different viewpoints can improve
+                        problem-solving and decision-making processes.</li>
+                    <li><strong>Increased Employee Engagement</strong>: Employees who feel included and valued are more
+                        likely to be engaged and motivated.</li>
+                    <li><strong>Improved Reputation</strong>: Organisations that prioritize diversity and inclusion can
+                        enhance their reputation and attract top talent and customers who value these principles.</li>
+                    <li><strong>Broader Market Reach</strong>: A diverse workforce can help organisations better
+                        understand and serve a diverse customer base.</li>
+                </ul>
+                Overall, diversity is not just a moral imperative but also a strategic advantage that can drive business
+                success and foster a more equitable society.
             </p>
 
             <h3>What is "Positive Action"?</h3>
