--- a/inclusion.html
+++ b/inclusion.html
@@ -63,10 +63,90 @@
             <h1>Inclusion</h1>
             <h3>What is Inclusion?</h3>
             <p>
+                <!-- AI written -->
+                Inclusion refers to the practice of ensuring that all individuals, regardless of their background,
+                identity, or circumstances, feel valued, respected, and supported within an organization. It involves
+                creating an environment where everyone has equal access to opportunities and resources, and where
+                diverse perspectives are welcomed and considered. Inclusion goes beyond simply having a diverse
+                workforce; it is about fostering a culture where differences are celebrated and every individual can
+                contribute to their fullest potential. Inclusive policies provide the following benefits to an
+                organisation:
 
+                <ul>
+                    <li>Enhances employee engagement and satisfaction</li>
+                    <li>Promotes creativity and innovation through diverse perspectives</li>
+                    <li>Improves company reputation and brand image</li>
+                    <li>Attracts a wider talent pool</li>
+                    <li>Reduces employee turnover and associated costs</li>
+                    <li>Ensures compliance with legal and regulatory requirements</li>
+                    <li>Fosters a positive and supportive work environment</li>
+                </ul>
             </p>
 
-            <h3></h3>
+            <h3>What are inclusive networks?</h3>
+            <p>
+                <!-- AI written -->
+                Inclusive networks are groups or communities within an organization that are designed to support and
+                promote the interests of underrepresented or marginalized groups. These networks provide a platform for
+                individuals to connect, share experiences, and advocate for positive change. Inclusive networks can take
+                various forms, such as employee resource groups (ERGs), affinity groups, or diversity councils. They
+                play a crucial role in fostering a sense of belonging, providing mentorship and career development
+                opportunities, and driving initiatives that promote diversity and inclusion within the organization.
+            </p>
+            <p>
+                These networks are not only a voice for people's concerns, but also can provide guidance on how to
+                attract people to your organisation.
+            </p>
+
+            <h5>Examples of inclusive networks</h5>
+            <p>
+                <!-- AI written -->
+                <ul>
+                    <li>Women's Network</li>
+                    <li>LGBTQ+ Network</li>
+                    <li>Black and Minority Ethnic (BAME) Network</li>
+                    <li>Disability Network</li>
+                    <li>Veterans Network</li>
+                    <li>Parents and Carers Network</li>
+                    <li>Young Professionals Network</li>
+                    <li>Faith and Belief Network</li>
+                </ul>
+            </p>
+
+            <h3>Implementing inclusive networks</h3>
+            <p>
+                <!-- AI written -->
+                Implementing inclusive networks requires a strategic approach and commitment from the organization. Here
+                are some steps and policies to consider:
+                <ol>
+                    <li><strong>Establish Clear Objectives</strong>: Define the purpose and goals of each network.
+                        Ensure they align with the organization's overall diversity and inclusion strategy.</li>
+                    <li><strong>Leadership Support</strong>: Secure commitment from senior leadership to champion and
+                        support the networks. This includes providing resources and visibility.</li>
+                    <li><strong>Inclusive Policies</strong>: Develop and enforce policies that promote inclusion and
+                        prevent bullying and discrimination. These policies should be communicated clearly to all
+                        employees.</li>
+                    <li><strong>Training and Education</strong>: Provide training for all employees on diversity,
+                        inclusion, and anti-discrimination. This helps create awareness and understanding of the
+                        importance of inclusive networks.</li>
+                    <li><strong>Safe Reporting Mechanisms</strong>: Establish confidential channels for reporting
+                        bullying, discrimination, or any other concerns. Ensure that these reports are taken seriously
+                        and addressed promptly.</li>
+                    <li><strong>Regular Monitoring and Evaluation</strong>: Continuously monitor the effectiveness of
+                        the networks and make necessary adjustments. Solicit feedback from network members to identify
+                        areas for improvement.</li>
+                    <li><strong>Mentorship and Support</strong>: Offer mentorship programs within the networks to
+                        support career development and personal growth. Encourage members to share their experiences and
+                        provide mutual support.</li>
+                    <li><strong>Celebrate Diversity</strong>: Recognize and celebrate the contributions of diverse
+                        groups within the organization. This can include events, awards, and other forms of recognition.
+                    </li>
+                </ol>
+
+                By implementing these steps and policies, organizations can create a supportive environment where
+                inclusive networks thrive and contribute to a positive workplace culture.
+            </p>
+
         </section>
 
 
