adjusting p element open and close tags in accordance with validation

--- a/diversity.html
+++ b/diversity.html
@@ -64,7 +64,8 @@
             <h3>What is Diversity?</h3>
             <p>
                 <!-- AI written -->
-                Diversity encompasses a wide range of characteristics within a group of people, including but not limited
+                Diversity encompasses a wide range of characteristics within a group of people, including but not
+                limited
                 to; race, ethnicity, gender, age, sexual orientation, disability, and cultural background.
 
                 Embracing diversity means recognizing and valuing these differences among employees, customers, and
@@ -72,18 +73,20 @@
                 able to contribute to their fullest potential.
 
                 A diverse workforce can bring numerous benefits to an organisation, including:
-                <ul>
-                    <li><strong>Enhanced Creativity and Innovation</strong>: Diverse teams bring varied perspectives and
-                        ideas, which can lead to more creative solutions and innovative approaches.</li>
-                    <li><strong>Better Decision-Making</strong>: A mix of different viewpoints can improve
-                        problem-solving and decision-making processes.</li>
-                    <li><strong>Increased Employee Engagement</strong>: Employees who feel included and valued are more
-                        likely to be engaged and motivated.</li>
-                    <li><strong>Improved Reputation</strong>: Organisations that prioritize diversity and inclusion can
-                        enhance their reputation and attract top talent and customers who value these principles.</li>
-                    <li><strong>Broader Market Reach</strong>: A diverse workforce can help organisations better
-                        understand and serve a diverse customer base.</li>
-                </ul>
+            </p>
+            <ul>
+                <li><strong>Enhanced Creativity and Innovation</strong>: Diverse teams bring varied perspectives and
+                    ideas, which can lead to more creative solutions and innovative approaches.</li>
+                <li><strong>Better Decision-Making</strong>: A mix of different viewpoints can improve
+                    problem-solving and decision-making processes.</li>
+                <li><strong>Increased Employee Engagement</strong>: Employees who feel included and valued are more
+                    likely to be engaged and motivated.</li>
+                <li><strong>Improved Reputation</strong>: Organisations that prioritize diversity and inclusion can
+                    enhance their reputation and attract top talent and customers who value these principles.</li>
+                <li><strong>Broader Market Reach</strong>: A diverse workforce can help organisations better
+                    understand and serve a diverse customer base.</li>
+            </ul>
+            <p>
                 Overall, diversity is not just a moral imperative but also a strategic advantage that can drive business
                 success and foster a more equitable society.
             </p>
@@ -119,28 +122,29 @@
             <h3>Implementing Positive Action</h3>
             <p>
                 Organisations can implement positive action by taking the following steps:
-                <ol>
-                    <!-- AI written, and pair programmed into a list with strong elements -->
-                    <li><strong>Identify Underrepresented Groups</strong>: Conduct an analysis to identify which groups
-                        are underrepresented or disadvantaged within the organisation.</li>
-                    <li><strong>Set Clear Objectives</strong>: Define clear, measurable objectives for what the
-                        organisation aims to achieve through positive action.</li>
-                    <li><strong>Develop Targeted Programs</strong>: Create programs such as mentorship, training, and
-                        outreach initiatives specifically designed to support underrepresented groups.</li>
-                    <li><strong>Review Recruitment Practices</strong>: Ensure that job advertisements, selection
-                        criteria, and interview processes are inclusive and do not inadvertently disadvantage any group.
-                    </li>
-                    <li><strong>Provide Training</strong>: Offer training for all employees on diversity, inclusion, and
-                        the importance of positive action to foster a supportive environment.</li>
-                    <li><strong>Monitor and Evaluate</strong>: Regularly monitor the effectiveness of positive action
-                        measures and make adjustments as necessary to ensure they are meeting the set objectives.</li>
-                    <li><strong>Communicate Commitment</strong>: Clearly communicate the organisation's commitment to
-                        positive action both internally and externally to build trust and transparency.</li>
-                </ol>
-                <p>
-                    By following these steps, organisations can create a more inclusive and equitable workplace that
-                    benefits all employees.
-                </p>
+            </p>
+            <ol>
+                <!-- AI written, and pair programmed into a list with strong elements -->
+                <li><strong>Identify Underrepresented Groups</strong>: Conduct an analysis to identify which groups
+                    are underrepresented or disadvantaged within the organisation.</li>
+                <li><strong>Set Clear Objectives</strong>: Define clear, measurable objectives for what the
+                    organisation aims to achieve through positive action.</li>
+                <li><strong>Develop Targeted Programs</strong>: Create programs such as mentorship, training, and
+                    outreach initiatives specifically designed to support underrepresented groups.</li>
+                <li><strong>Review Recruitment Practices</strong>: Ensure that job advertisements, selection
+                    criteria, and interview processes are inclusive and do not inadvertently disadvantage any group.
+                </li>
+                <li><strong>Provide Training</strong>: Offer training for all employees on diversity, inclusion, and
+                    the importance of positive action to foster a supportive environment.</li>
+                <li><strong>Monitor and Evaluate</strong>: Regularly monitor the effectiveness of positive action
+                    measures and make adjustments as necessary to ensure they are meeting the set objectives.</li>
+                <li><strong>Communicate Commitment</strong>: Clearly communicate the organisation's commitment to
+                    positive action both internally and externally to build trust and transparency.</li>
+            </ol>
+            <p>
+                By following these steps, organisations can create a more inclusive and equitable workplace that
+                benefits all employees.
+            </p>
 
         </section>
 
